Fixed #262196 - Debugger tries to pass project directory as a symbol file

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/Bundle.properties
@@ -84,6 +84,7 @@ CleanActionName=Clean
 ConfigureActionName=Configure
 RunActionName=Run
 DebugActionName=Debug
+AttachActionName=Attach
 CheckExecutableActionName=Check Executable
 CustomActionName=Profile
 TestActionName=Test
