--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/Bundle.properties
@@ -193,3 +193,19 @@ style_header=C/C++ Header
 
 paste_operation_copy=Cannot copy {0}
 paste_operation_move=Cannot move {0}
+
+# MakeCustomizerProvider
+LBL_Project_Customizer_Title=Project Properties - {0}
+LBL_Folder_Customizer_Title=Folder Properties - {0}
+LBL_File_Customizer_Title=File Properties - {0}
+LBL_Customizer_Ok_Option=OK
+LBL_Customizer_Cancel_Option=Cancel
+LBL_Customizer_Apply_Option=Apply
+MNE_Customizer_Apply_Option=A
+ACSD_Customizer_Ok_Option=N/A
+ACSD_Customizer_Cancel_Option=N/A
+ACSD_Customizer_Apply_Option=N/A
+AD_MakeCustomizerProviderOk=N/A
+AD_MakeCustomizerProviderCancel=N/A
+AD_MakeCustomizerProviderApply=N/A
+
