--- a/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/Bundle.properties
+++ b/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/Bundle.properties
@@ -32,3 +32,5 @@ CND/ToolChains/CLang_solaris=CLang Solaris
 CND/ToolChains/CLang_mac=CLang Mac
 CND/ToolChains/CLang=CLang
 CND/ToolChains/Intel=Intel
+DLG_TITLE_ApplyChanges=Saving Changes
+MSG_TITLE_ApplyChanges=Please wait while changes are being saved.
