--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/dialogs/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/dialogs/Bundle.properties
@@ -107,3 +107,23 @@ ADD_EXTENSION_DIALOG_TITLECPPS=New C++ Extensions
 
 # Contributor(s):
 ConfirmExtensionsImpl.textPane.text1=The project contains files with extensions which are now not associated with any supported C/C++ files.\nThe following extensions will be associated with C/C++ files.
+ConfigurationWarningPanel.doNotShowAginCheckBox.text=&Do not show again
+
+ResolveBuildLibrary.Title.text=Resolve Build Issue
+ResolveBuildLibrary.Explanation.text=IDE uses Smart Build analyzer to Configure Code Assistance.\n\
+The error can be caused by resetting or unsetting LD_LIBRARY_PATH environment variable in your build.\n\n\
+To resolve the issue, you can do any of the following (listed in order of diminishing priority):\n\n\
+1. Do not unset LD_LIBRARY_PATH in your build or modify it like LD_LIBRARY_PATH=user_path1:user_path2:$LD_LIBRARY_PATH.\n\n\
+2. Unset LD_PRELOAD if LD_LIBRARY_PATH is unset in your build. Note that this disables Smart Build Analyzer.\n\n\
+3. Press the Configure Smart Build Analyzer button below and deselect the Use Build Analyzer in Code Assistance node in Project Properties.
+ResolveBuildLibrary.Forbid.text=Configure Smart Build Analyzer...
+ResolveBuildLibrary.Close.text=Close
+
+ResolveRfsLibrary.Title.text=Resolve Build Issue
+ResolveRfsLibrary.Explanation.text=IDE uses Automatic copying on a remote host.\n\
+The error can be caused by resetting or unsetting LD_LIBRARY_PATH environment variable in your build.\n\n\
+To resolve the issue, you can choose either:\n\n\
+1. Do not unset LD_LIBRARY_PATH in your build or modify it like LD_LIBRARY_PATH=user_path1:user_path2:$LD_LIBRARY_PATH.\n\n\
+2. Press the Change Access button below and, in Miscellaneous section of Host Propertes, choose System level file sharing (NFS, Samba) from Access project files via list.
+ResolveRfsLibrary.Forbid.text=Change Access...
+ResolveRfsLibrary.Close.text=Close
