fixing Bug #262270 Split cnd.makeproject module on module and module UI - move run dialog in ui package

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/actions/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/actions/Bundle.properties
@@ -258,3 +258,53 @@ VCSWarningMessage=WARNING: This operation will not copy hidden files. If this pr
 LBL_Pre_Delete_Question=Are you sure you want to delete it?
 
 ########## copied fromorg.netbeans.modules.project.uiapi - END ##########
+
+# RunDialogPanel
+RUN_DIALOG_PANEL_AD=Run executable
+EXECUTABLE_LBL=E&xecutable:
+EXECUTABLE_AD=Path to executable
+BROWSE_BUTTON_TXT=&Browse...
+BROWSE_BUTTON_AD=Browse for executable
+ASSOCIATED_PROJECT_LBL=&Project:
+ASSOCIATED_PROJECT_AD=Associated project
+DIALOG_GUIDANCETEXT_RO=Select a project to use with this executable.
+DIALOG_GUIDANCETEXT=Select an executable and a project to use with it.
+DIALOG_GUIDANCETEXT_CREATE=Select an executable or dynamic loaded library or object file  to create new project.
+NO_PROJECT=<create new project>
+CREATING_PROJECT_PROGRESS=Creating project...
+Run_Directory=Run Directory
+SelectLabel=Select
+SelectExecutable=Select Executable
+SelectWorkingDir=Select Working Directory
+ERROR_DONTEXIST=Executable does not exist
+ERROR_NOTAEXEFILE=File is not an executable
+ERROR_RUNDIR_DONTEXIST=Working Directory does not exist
+ERROR_RUNDIR_INVALID=Invalid Working Directory
+RUN_DIRECTORY_LABEL_TXT=&Working Directory:
+RUN_DIRECTORY_LABEL_AD=Working Directory
+RUN_DIRECTORY_BUTTON_TXT=B&rowse...
+RUN_DIRECTORY_BUTTON_AD=Browse for working directory
+ARGUMENTS_LABEL_TXT=&Arguments:
+ARGUMENTS_LABEL_AD=Arguments
+ENVIRONMENT_LABEL_TXT=&Environment:
+ENVIRONMENT_LABEL_AD=Environment variables
+RunDialogPanel.project.location.button=Br&owse...
+RunDialogPanel.project.name.label=Project &Name:
+RunDialogPanel.project.location.label=Project &Location:
+RunDialogPanel.project.folder.label=Project Folder:
+RunDialogPanel.MSG_IllegalProjectName=Project Name is not a valid folder name.
+RunDialogPanel.MSG_IllegalProjectLocation=Project Location is not valid path.
+RunDialogPanel.MSG_ProjectFolderReadOnly=Project Folder parent is read only.
+RunDialogPanel.MSG_NotAFolder=Project Folder exists and is not a folder.
+RunDialogPanel.MSG_ProjectfolderNotEmpty=Project Folder already exists and is not empty. "{0}" exists.
+RunDialogPanel.Title_SelectProjectLocation=Select Project Location
+ProjectKindName=&Dependencies:
+ProjectItemKind_Minimal=Do not Include Dependencies
+ProjectItemKind_IncludeDependencies=Include Dependencies into the Project
+ProjectItemKind_CreateDependencies=Create Separate Projects for Dependencies
+Configuration.Text=&Configuration:
+USE_CURRENT_CONFIGURATION=Use Current Configuration
+UPDATE_CURRENT_CONFIGURATION=Update Current Configuration
+CREATE_NEW_CONFIGURATION=Create New Configuration
+
+
