fixing Bug #262270 Split cnd.makeproject module on module and module UI - CompilerSet2Configuration should not depend on ui

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
@@ -352,6 +352,7 @@ PrependToolCollectionPathHint=Prepend tool collection path to PATH environment v
 # CompilerSet2Configuration
 NOT_FOUND={0} - not found
 NOT_CONFIGURED={0} - Not configured
+default_cs=Default
 
 # PackagingConfiguration
 PackageTypeName=Package Type
