Make files in nbproject folder added to ignore list

--- a/.hgignore
+++ b/.hgignore
@@ -4,6 +4,8 @@
 /nbproject/private$
 /nbproject/sqe.properties$
 /nbproject/findbugs.settings$
+/nbproject/.*\.mk$
+/nbproject/.*\.bash$
 /test/(coverage|lib|results|work)$
 derby\.log
 \.class$
