fixing Bug #262270 Split cnd.makeproject module on module and module UI - split make action provider

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/Bundle.properties
@@ -94,3 +94,15 @@ NOT_FOUND=\"{0}\" command not found in PATH.
 HOST_OFFLINE=Remote host {0} is offline.
 
 EnvResolver_connection_text=IDE needs to get host environment variables
+
+#DefaultAntProjectOperations:
+LBL_Progress_Cleaning_Project=Cleaning Project
+LBL_Progress_Deleting_File=Deleting {0}
+LBL_Project_cannot_be_deleted.=Project {0} cannot be deleted.
+#Error messages:
+#{0}: localized message of the original exception
+ERR_Cannot_Move=Cannot move project, reason: {0}
+#{0}: localized message of the original exception
+ERR_Cannot_Rename=Cannot rename project, reason: {0}
+#{0}: localized message of the original exception
+ERR_Cannot_Copy=Cannot copy project, reason: {0}
