--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/runprofiles/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/runprofiles/Bundle.properties
@@ -129,3 +129,9 @@ DirectoryChooserPanel.browseButton.mn=B
 
 Run_Directory=Run Directory
 SelectLabel=Select
+
+TargetExecutor.StopAction.stop=Stop
+TargetExecutor.RerunAction.rerun=Re-run
+TargetExecutor.RerunAction.rerun-mod=Re-run with Different Parameters
+TargetExecutor.TermAction.text=Open Working Directory in Terminal
+TargetExecutor.TermAction.tabTitle={0} - {1}
