#262348: fixing ODCS query form layout not to take up so much vertical space and be more consistent with other bugtracking query forms

--- a/odcs.tasks/src/org/netbeans/modules/odcs/tasks/query/Bundle.properties
+++ b/odcs.tasks/src/org/netbeans/modules/odcs/tasks/query/Bundle.properties
@@ -50,7 +50,7 @@ QueryPanel.jLabel1.text=Name:
 QueryPanel.nameField.text=
 QueryPanel.jLabel2.text=...
 QueryPanel.jLabel1.text_1=Issue ID:
-QueryPanel.byTextLabel.text_1=Find issues by text
+QueryPanel.byTextLabel.text_1=Find by Text
 QueryPanel.byDetailsLabel.text=Find by product details
 QueryPanel.byPeopleLabel.text=Find by people
 QueryPanel.byLastChangeLabel.text=Find by date
@@ -73,7 +73,6 @@ LBL_RetrievingIssue=Retrieved issue {0}
 MSG_CantRemoveQuery=Can't remove a predefined query.
 MSG_RemoveQuery=Do you want to remove the query ''{0}''?
 CTL_RemoveQuery=Remove
-QueryPanel.urlToggleButton.textForm=Create Query in Form
 QueryPanel.filterLabel.text_1=Filter:
 QueryPanel.lastRefreshLabel.text_1=Last run:
 
@@ -129,11 +128,8 @@ QueryPanel.issueTypeLabel.text=Issue Type
 QueryPanel.priorityLabel.text=Priority
 QueryPanel.severityLabel.text=Severity
 QueryPanel.byPropertiesLabel.text=Find by properties
-QueryPanel.byWorkflowLabel.text=Find by workflow
-QueryPanel.iterationLabel.text=Iteration
-QueryPanel.startTextField.text=
+QueryPanel.iterationLabel.text=Sprint
 QueryPanel.startLabel.text=Start:
-QueryPanel.endTextField.text=
 QueryPanel.endLabel.text=End:
 QueryPanel.jLabel3.text=(YYYY-MM-DD)
 QueryPanel.jLabel9.text=(YYYY-MM-DD)
