fixed Bug #262270 Split cnd.makeproject module on module and module UI - fix bundles

--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/Bundle.properties
@@ -96,9 +96,7 @@ LBL_PreBuildAction_Name=Pre-Build
 
 # SelectExecutablePanel
 LIST_LABEL_TEXT=&Executables:
-LIST_LABEL_MN=E
 EXECUTABLE_TEXT=E&xecutable to use:
-EXECUTABLE_MN=x
 BROWSE_BUTTON_TEXT=&Browse
 GUIDANCE_TEXT=No executable specified in project.\n\nSelect an executable from the list below or use the Browse button to locate an executable to use.
 SourceFilesInstructions=Source files from the specified folders will be added to the project.
@@ -108,7 +106,6 @@ NO_EXE_ERROR=No executable specified.
 EXE_DOESNT_EXISTS=Executable does not exist.
 FILE_NOT_AN_EXECUTABLE=File is not an executable.
 WRONG_WORKING_DIR=Working directory "{0}" does not exist, check Build | Make | Working Directory property.
-BROWSE_BUTTON_MN=B
 Search_In_Progress=Still searching for executables. The list could be incomplete yet...
 
 Tree_Loading=Loading...
@@ -182,6 +179,7 @@ env_var_fix_title=Undefined Environment Variables Warning
 env_var_fix.label.text=The project uses undefined environment variables:
 env_var_fix.solution.local.text=To fix problem:\n 1. Exit the IDE;\n 2. Set environment variables;\n 3. Start the IDE again.\nTemporary you can specify variables values.\nThe IDE will use values in the current session.
 env_var_fix.solution.remote.text=To fix problem:\n 1. Set environment variables in remote host login shell profile;\n 2. Reconnect the host.\nTemporary you can specify variables values.\nThe IDE will use values in the current session.
+EnvResolver_connection_text=IDE needs to get host environment variables
 
 #Resolve style problem...
 style_resolve_name=Undefined formatting style
@@ -222,3 +220,5 @@ Would you like to continue?\n\n\
 If you choose Yes, the project will be upgraded to the current version and the project can no longer be opened with the earlier version of the IDE. \
 If you choose No, your changes will be lost.
 
+#SelectExecutablePanel
+SELECT_EXECUTABLE=Select Executable
