--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/dialogs/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/dialogs/Bundle.properties
@@ -36,10 +36,12 @@
 #
 # Contributor(s):
 
+#ConfirmExtensionsImpl
 ConfirmExtensions.dialog.title=New Extensions
 ConfirmExtensions.headerCheck.text1=&Header Extensions: {0}
 ConfirmExtensions.cCheck.text1=&C Extension: {0}
 ConfirmExtensions.cppCheck.text1=C++ &Extension: {0}
+ConfirmExtensions.textPane.text1=The project contains files with extensions which are now not associated with any supported C/C++ files.\nThe following extensions will be associated with C/C++ files.
 
 # additional NB/project extensions
 ADD_EXTENSION_QUESTIONH=The project contains C/C++ header files with extension \"{0}\" which is now not \
@@ -69,7 +71,6 @@ ADD_EXTENSION_QUESTIONCPPS=The project contains C++ source files with extensions
 ADD_EXTENSION_DIALOG_TITLECPP=New C++ Extension
 ADD_EXTENSION_DIALOG_TITLECPPS=New C++ Extensions
 
-ConfirmExtensionsImpl.textPane.text1=The project contains files with extensions which are now not associated with any supported C/C++ files.\nThe following extensions will be associated with C/C++ files.
 ConfigurationWarningPanel.doNotShowAginCheckBox.text=&Do not show again
 
 ResolveBuildLibrary.Title.text=Resolve Build Issue
