--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/configurations/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/configurations/Bundle.properties
@@ -73,40 +73,27 @@ ADD_PROJECTS_BUTTON_TT=Add project to the list of required projects
 ADD_PROJECTS_BUTTON_MN=A
 PROJECTS_TXT=Projects:
 PROJECTS_MN=P
-
-
-# LibraryOptionPanel
 STATIC_BINDINGS_TXT=&Static Bindings
-STATIC_BINDINGS_MN=S
 DYNAMIC_BINDINGS_TXT=&Dynamic Bindings
-DYNAMIC_BINDINGS_MN=D
 OTHER_OPTION_TXT=&Other Option
-OTHER_OPTION_MN=O
 
-#Make Artifact Chooser
+#MakeArtifactChooser
 PROJECT_NAME_TXT=Project Name:
 PROJECT_LIBRARY_FILES_TXT=Con&figurations:
-PROJECT_LIBRARY_FILES_MN=f
 PROJECT_LIBRARY_FILES_AD=Configurations
 ADD_ITSELF_ERROR=Cannot add reference to itself.
 ADD_CYCLIC_ERROR=Cannot add cyclic references.
 LOADING_PROJECT=Loading...
 
-# OptionsPanel
+#OptionsEditorPanel
 ALL_OPTIONS_TXT=&All Options:
-ALL_OPTIONS_MN=A
 INHERIT_TXT=&Inherit from project
-INHERIT_MN=I
 INHERIT_AD=Inherit from project
 ADDITIONAL_OPTIONS_TXT=Additional &Options:
 ADDITIONAL_OPTIONS_AD=Additional Options
-ADDITIONAL_OPTIONS_MN=O
 
 #StdLibPanel
 STANDARD_LIBRARIES_TXT=&Standard Libraries:
-STANDARD_LIBRARIES_MN=S
-MANAGE_LIBRARIES_TXT=Manage Libraries...
-MANAGE_LIBRARIES_MN=M
 
 #TableEditorPanel
 CLICK_TO_CHANGE=Configuration - click to change...
@@ -133,7 +120,10 @@ ProjectPropPanel.testRootLabel.text=Test Folders:
 ProjectPropPanel.testRootLabel.mn=l
 ProjectPropPanel.projectLabel.text=Project &Location:
 ProjectPropPanel.projectLabel.ad=Project Location
-ProjectPropPanel.projectLabel.mn=L
+ProjectPropPanel.seeAlsoLabel.text=(See also IDE level file filter in Options->Miscellaneous->Files)
+ProjectPropPanel.ignoreFoldersLabel.text=&Ignored Folders Pattern:
+ProjectPropPanel.ignoreFoldersDefaultButton.text=De&fault
+ProjectPropPanel.incorrectRegEx=Folders Pattern is incorrect:\n {0}\nRestoring to default value.
 ADD_BUTTON_MN=d
 ADD_BUTTON_TXT=Add
 
@@ -490,12 +480,6 @@ UP_BUTTON_LBL=Up
 UP_BUTTON_MNEMONIC=p
 DOWN_BUTTON_LBL=Down
 DOWN_BUTTON_MNEMONIC=o
-ProjectPropPanel.seeAlsoLabel.text=(See also IDE level file filter in Options->Miscellaneous->Files)
-ProjectPropPanel.ignoreFoldersLabel.text=&Ignored Folders Pattern:
-ProjectPropPanel.ignoreFoldersLabel.mn=i
-ProjectPropPanel.ignoreFoldersDefaultButton.text=De&fault
-ProjectPropPanel.ignoreFoldersDefaultButton.mn=f
-ProjectPropPanel.incorrectRegEx=Folders Pattern is incorrect:\n {0}\nRestoring to default value.
 
 #CompilerSetEditorCustomizer
 CompilerSetEditorCustomizerTitile=Tool Collection Manager - {0}
@@ -527,6 +511,8 @@ CodeAssistanceItem_IncludedHeader=Included As Header File
 CodeAssistanceItem_ExcludedSource=Not Parsed Source File
 CodeAssistanceItem_ExcludedHeader=Header Not Included By Source Files
 CodeAssistanceItem_NotYetParsed=Not Yet Parsed File
+
+#MacroExpandedEditorPanel
 MacroExpandedEditorPanel.previewLabel.text=Preview:
 
 #Platform specific configuration
