--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
@@ -495,3 +495,6 @@ metadata was modified in file system and in current session.\n\n\
 Reload the project from disk and\n\
 override current changes to the project settings?
 MakeConfigurationDescriptor.UpdateConfigurationText.auto=Yes
+
+Run_Directory=Run Directory
+SelectLabel=Select
