--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/runprofiles/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/runprofiles/Bundle.properties
@@ -51,25 +51,17 @@ RUNDIR_LBL=Run Directory:
 RUNDIR_MNE=R
 RUNDIR_BUTTON=Browse...
 RUNDIR_BUTTON_MNE=B
+
+#EnvPanel
 ENVIRONMENT_LBL=&Environment Variables:
-ENVIRONMENT_MNE=E
 ADD_BUTTON=A&dd
-ADD_BUTTON_MNE=d
 REMOVE_BUTTON=Rem&ove
-REMOVE_BUTTON_MNE=O
-BUILD_FIRST_CHECKBOX=Build First
-BUILD_FIRST_CHECKBOX_MNE=F
 EnvName=Name
 EnvValue=Value
-
-ACSN_TARGET_EDITOR=Configuration Name Editor
-ACSD_TARGET_EDITOR=This dialog allows you to add, rename, and delete configurations associated with a build
-ACSN_TARGET_LIST=Configuration List
-ACSD_TARGET_LIST=List of configurations
-
 ACSD_ENV_VAR_TABLE=Environment variables
 ACSD_ADD_BUTTON=Add environment variable button
 ACSD_REMOVE_BUTTON=Add environment variable button
+
 RerunArguments.argumentsLabel.text=Run Command:
 RerunArguments.title.text=Re-run with Arguments
 LBL_run_advanced_run=Run
@@ -81,32 +73,15 @@ DirectoryChooserPanel.directoryLabel.text=&Directory:
 DirectoryChooserPanel.browseButton.text=&Browse
 DirectoryChooserPanel.directoryTextField.text=
 
+# Console selection
 ConsoleType_LBL=Console Type
 ConsoleType_HINT=Controls where a program is run
-ConsoleType_Default=Default
-ConsoleType_External=External Terminal
-ConsoleType_Internal=Internal Terminal
-ConsoleType_Output=Standard Output
 
 TerminalType_LBL=External Terminal Type
 TerminalType_HINT=What terminal emulator to use
-TerminalType_None=None
-TerminalType_Default=Default
-TerminalType_GNOME=Gnome Terminal
-TerminalType_KDE=KDE Konsole
-TerminalType_XTerm=XTerm
-TerminalType_CommandWindow=Command Window
 
 RemoveInstrumentation_LBL=Remove Instrumentation
 RemoveInstrumentation_HINT=Remove "-xinstrument=datarace" instrumentation on run action
-RemoveInstrumentation_Ask=Ask
-RemoveInstrumentation_Yes=Yes
-RemoveInstrumentation_No=No
-
-LBL_RunPrompt=[Press Enter to close window]
-
-Err_NoTermFound=No terminal program found. Switching output to Output Window. No input will be available.
-Err_MissingDorunScript=Missing dorun script.
 
 GeneralName=General
 GeneralTT=General
@@ -124,8 +99,6 @@ BuildFirstName=Build First
 BuildFirstHint=Build the project before executing binary
 EnvironmentName=Environment
 EnvironmentHint=Environment variables
-DirectoryChooserPanel.directoryLabel.mn=D
-DirectoryChooserPanel.browseButton.mn=B
 
 Run_Directory=Run Directory
 SelectLabel=Select
