--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
@@ -40,86 +40,7 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 
-# MakefileConfiguration
-WorkingDirectory_LBL=Working Directory
-BuildCommandLine_LBL=Build Command
-CleanCommandLine_LBL=Clean Command
-BuildResult_LBL=Build Result
-WorkingDirectory_TT=The directory in which the build and clean commands are executed.
-BuildCommandLine_TT=The command that builds the project.
-CleanCommandLine_TT=The command that cleans the project.
-BuildResult_TT=The path to the output of the Build Command and could be a path to an executable or library.
-ProjectsTxt1=Related Projects
-ProjectsHint=Projects
-ProjectsTxt2=Projects:
-
-#Common
-GeneralTxt=General
-GeneralHint=General
-AdditionalDependenciesTxt1=Additional Dependencies
-AdditionalDependenciesHint=Additional dependencies
-AdditionalDependenciesTxt2=Additional dependencies:
-InputTxt=Input
-InputHint=Input
-OutputTxt=Output
-OutputHint=Name of output file or output directory.
-OtherOptionsTxt=Other Options
-OtherOptionsHint=Other options
-ToolTxt1=Tool
-ToolHint1=The name of the tool to use for this operation.
-ToolTxt2=Tool
-ToolHint2=Tool
-RanlibToolTxt=Indexer tool
-RanlibToolHint=Name of indexer tool
-OptionsTxt=Options
-OptionsHint=Options
-StripSymbolsTxt=Strip Symbols
-StripSymbolsHint=Strip symbols
-AdditionalOptionsTxt1=Additional Options
-AdditionalOptionsHint=Additional options
-AdditionalOptionsTxt2=Additional options:
-AllOptionsTxt=All options:
-CommandLineTxt=Compilation Line
-CommandLineHint=Compilation line was used to compile this compilation unit
-CompileFolderTxt=Compilation Folder
-CompileFolderHint=Folder where compilation unit was compiled
-
-SPECIAL_CHARATERS_ERROR=Special characters including spaces are not allowed in Output
-
-# Archiver Configuration
-RunRanlibTxt=Run Ranlib
-RunRanlibHint=Whether to run ranlib
-VerboseTxt=Verbose
-SupressDiagnosticsTxt=Suppress Diagnostics
-SupressDiagnosticsHint=Suppress diagnostics messages
-InheritedValuesTxt=Inherited values:
-
-FilesTxt=Files
-
-#Code Assistance Configuration
-CodeAssistanceTxt=General
-CodeAssistanceHint=Configuring code assistance
-BuildAnalyzerTxt=Use Build Analyzer
-BuildAnalyzerHint=Configure code assistance by build artifacts after each building. 
-ToolsTxt2=List of Analyzed Tools
-ToolsHint2=Column separated compiler names. Analyzer uses list to collect compiler invocations at project building time.
-TransientMacrosTxt=Transient Macros
-TransientMacrosHint=List of transient macros (macros that depend on time, date or specific environment). Value of transient macros is not stored in the public project metadata.
-TransientMacrosLbl=&Transient Macros:
-EnvironmentVariablesTxt=User Environment Variables
-EnvironmentVariablesHint=List of environment variables that are used in include strings to replace system specific paths.
-EnvironmentVariablesLbl=User Environment &Variables
-
-IncludeInCodeAssistanceTxt=Advanced
-IncludeInCodeAssistanceHint=Advanced settings.
-IncludeFlagTxt=Extra Source Files
-IncludeFlagHint=Add source files not included in build to code assistance.
-
-ExcludePatternTxt=Exclude Pattern
-ExcludePatternHint=Exclude from code assistance pattern.<br>For example to exclude all source files from folder lnk use:<br><pre>/lnk/</pre>
-InvalidPattern=Invalid Exclude from code assistance pattern.
-
-# Basic Compiler Configuration
+# Basic Compiler Configuration development modes
 FastBuildTxt=No Flags
 DebugTxt=Debug
 PerformanceDebugTxt=Performance Debug
@@ -127,122 +48,60 @@ TestCoverageTxt=Test Coverage
 DiagnosableReleaseTxt=Diagnosable Release
 ReleaseTxt=Release
 PerformanceReleaseTxt=Performance Release
+
+# Basic Compiler Configuration warning levels
 NoWarningsTxt=No Warnings
 SomeWarningsTxt=Some Warnings
 MoreWarningsTxt=More Warnings
 ConvertWarningsTxt=Convert Warnings to Errors
-BasicOptionsTxt=Basic Options
-BasicOptionsHint=Basic options
-DevelopmentModeTxt=Development Mode
-DevelopmentModeHint=Development mode
-WarningLevelTxt=Warning Level
-WarningLevelHint=Warning level
-64BitArchitectureTxt=Architecture
-64BitArchitectureHint=32 or 64 bit architecture
+
+# Basic Compiler Configuration bits names
 BITS_DEFAULT=<Default>
 BITS_32=32 Bits
 BITS_64=64 Bits
-CPPStandardTxt=C++ Standard
-CPPStandardHint=C++11 or C++98 C++ standard
-STANDARD_DEFAULT=<Default>
-STANDARD_INHERITED=<Inherited>
-STANDARD_INHERITED_WITH_VALUE=<Inherited> ({0})
-STANDARD_CPP98=C++98
-STANDARD_CPP11=C++11
-STANDARD_CPP14=C++14
-CStandardTxt=C Standard
-CStandardHint=C89 or C99 C standard
-STANDARD_C89=C89
-STANDARD_C99=C99
-STANDARD_C11=C11
 
-# CCCCompilerConfiguration
+# Basic Compiler Configuration MT_LEVEL_NAMES
 NoneTxt=None
 SafeTxt=Safe
 AutomaticTxt=Automatic
 OpenMPTxt=OpenMP
+
+#CCCompilerConfiguration C++ standatd names
+STANDARD_DEFAULT=<Default>
+STANDARD_INHERITED=<Inherited>
+STANDARD_CPP98=C++98
+STANDARD_CPP11=C++11
+STANDARD_CPP14=C++14
+
+#CCompilerConfiguration C standatd names
+STANDARD_C89=C89
+STANDARD_C99=C99
+STANDARD_C11=C11
+
+#CCCCompilerConfiguration LIBRARY_LEVEL_NAMES
 RuntimeOnlyTxt=Runtime Only
 ClassicIostreamsTxt=Classic Io Streams
 BinaryStandardTxt=Binary Standard
 ConformingStandardTxt=Conforming Standard
+
+#CCCCompilerConfiguration STANDARDS_NAMES
 OldTxt=Old
 LegacyTxt=Legacy
 DefaultTxt=Default
 ModernTxt=Modern
-AllTxt=All
-IncludeDirectoriesTxt=Include Directories
-IncludeDirectoriesHint=Include directories (included by -I options).
-IncludeFilesTxt=Include Headers
-IncludeFilesHint=Include headers (included -include options).
-PreprocessorDefinitionsTxt=Preprocessor Definitions
-PreprocessorDefinitionsHint=Preprocessor definitions
-PreprocessorDefinitionsLbl=Prepr&ocessor Definitions:
-PreprocessorUndefinedTxt=Preprocessor Undefined
-PreprocessorUndefinedHint=Preprocessor undefined macros. Macro names are prefixed with the compiler option (usually -U).
-PreprocessorUndefinedLbl=Preprocessor &Undefined:
-UseLinkerLibrariesTxt=Use Linker Libraries
-UseLinkerLibrariesHint=Use pkg-config libraries defined in the Linker configuration.\
- Checked property adds user include paths and user defined macros for each pkg-config library by invoking pkg-config by command:<br>\
- `pkg-config --cflags libraryName`
 
-# CCCompilerConfiguration
-MultithreadingLevelTxt=Multithreading Level
-MultithreadingLevelHint=Note for OpenMP on Solaris and Linux: unless already defined, the IDE will set the maximum number of threads the program can create to 2 via the environment variable OMP_NUM_THREADS. \
-Go to the Run|Environment property in the project properties and set OMP_NUM_THREADS to the number of your choice if you want to change this.
-LibraryLevelTxt=Library Level
-LibraryLevelHint=Library level
-StandardsEvolutionTxt=Standards Evolution
-StandardsEvolutionHint=Standards evolution
-LanguageExtensionsTxt=Language Extensions
-LanguageExtensionsHint=Language extensions
+#CCCCompilerConfiguration LANGUAGE_EXT_NAMES
+AllTxt=All
 
 # Configuration
 ActiveTxt=(active)
 
 # CustomToolConfiguration
 PerformingStepTxt=Performing Custom Build Step
-CustomBuildTxt=Custom Build
-CustomBuildHint=Custom build
-CommandLineTxt2=Command Line
-CommandLineHint2=Command line
-DescriptionTxt=Description
-DescriptionHint=Description
-OutputsTxt=Outputs
-OutputsNint=Outputs
 
 # Folder
 NewFolderName=New Folder
 NewTestFolderName=New Test
-
-# Item Configuration
-ItemTxt=Item
-ItemHint=Item
-NameTxt=Name
-FilePathTxt=File Path
-FullFilePathTxt=Full File Path
-LastModifiedTxt=Last Modified
-ItemConfigurationTxt=Item Configuration
-ItemConfigurationHint=Item configuration
-ExcludedFromBuildTxt=Excluded From Build
-ExcludedFromBuildHint=Excluded from build
-ExcludedFromCodeAssistanceTxt=Excluded From Code Assistance
-ExcludedFromCodeAssistanceHint=The check box is selected if the configuring code assistance does not detect build artifacts for the item.\n\
-You can manually unselect the check box and provide code assistance additional information about include directories and preprocessor definitions.\n\
-If the check box is selected for C/C++ item, Code Assistance will be available according to project Extra Source Files check box.
-IncludedInCodeAssistance=Add To Parse
-IncludedInCodeAssistanceTxt=Add To Parse
-IncludedInCodeAssistanceHint=Force to parse item. Can be used to parse extra headers not included by any compilation units. Or to manually add source as extra compilation unit.
-CodeAssistanceTxt=Has Code Assistance
-CodeAssistanceHint=The field reflects code assistance state. Code assistance is avaliable for compilation units, headers included in compilation units and extra source files.
-ResolveSymbolicLinksTxt=Resolve Symbolic links
-ResolveSymbolicLinksHint=If build system uses links to source files, add original files instead of links into project. The property is taken from\
-<br><b>Tools/Options/C/C++/Project Options/Resolve symbolic links</b><br>\
-when project is created.
-
-# Folder Configuration
-FolderConfiguration=Folder Configuration
-FolderConfigurationTxt=Folder Configuration
-FolderConfigurationHint=Folder Configuration
 
 # LibraryItem
 ProjectTxt=Project: {0}
@@ -251,63 +110,20 @@ LibraryTxt=Library: {0}
 LibraryFileTxt=Library File: {0}
 LibraryOptionTxt=Library Option: {0}
 
-# Linker Configuration
-PositionIndependantCodeTxt=Position Independent Code
-PositionIndependantCodeHint=Position independent code (-Kpic)
-NoRunPathTxt=No Run Path
-NoRunPathHint=No run path (-norunpath)Hint
-AssignNameTxt=Assign Name
-AssignNameHint=Assign name (-h <Output>)
-AdditionalLibraryDirectoriesTxt=Additional Library Directories
-AdditionalLibraryDirectoriesHint=Additional library directories (-L)
-RuntimeSearchDirectoriesTxt=Runtime Search Directories
-RuntimeSearchDirectoriesHint=Runtime search directories (<code>-R</code> or <code>-Wl,-rpath</code> linker options).<br>\
-Makes sense on Unix only.
-LibrariesTxt1=Libraries
-LibrariesHint=Libraries
-LibrariesTxt2=Libraries:
-AllOptionsTxt2=All Options:
-MakefileTxt=Makefile
-MakefileHint=Makefile
+# Linker Configuration SEARCH_PATH_NAMES
 SEARCH_PATH_NONE=Do not Add
 SEARCH_PATH_RELATIVE_TO_WORKING_DIR=Relative to Run Directory
 SEARCH_PATH_RELATIVE_TO_BINARY=Relative to Binary
 SEARCH_PATH_ABSOLUTE=Absolute
-RunTimeSerchPathTxt= Runtime Library Search Path
-RunTimeSerchPathHint=Adds runtime library search path for dependent shared libraries.<br>\
-Adds <code>-R</code> or <code>-Wl,-rpath</code> linker option.<br>\
-Makes sense on Unix only.
-CopyLibrariesTxt=Copy shared libraries
-CopyLibrariesHint=Copies dependent shared libraries (e.g., from subprojects) to the output directory.
 
-#Pre-Build Configuration
-PreBuildTxt=Pre-Build
-PreBuildHint=Pre-Build
-PreBuildWorkingDirectory_LBL=Working Directory
-PreBuildWorkingDirectory_TT=The directory in which the pre-build command is executed.
-PreBuildCommandLine_LBL=Command Line
-PreBuildCommandLine_TT=Pre-Build command line.\
-   <br>The macro ${IDE_CC} and ${IDE_CXX} is substituted by a C and C++ compiler paths from the tool collection selected.
-PreBuildFirst_LBL=Pre-Build First
-PreBuildFirst_TT=Run pre-build before build.
-
-#Compile Configuration
-CompileTxt=Compile File
-CompileHint=Compile single file command.
-CompileWorkingDirectory_LBL=Compile Working Directory
-CompileWorkingDirectory_TT=The directory in which the compile command is executed.\
-   <br>Set this path to ${AUTO_FOLDER} to have the IDE automatically detect the directory.
-CompileCommandLine_LBL=Compile Command
-CompileCommandLine_TT=The command to compile a single file.\
-   <br>Set the command to ${AUTO_COMPILE} to have the IDE create the command automatically using compiler options detected during project creation.\
-   <br>In command arguments, the macro ${ITEM_PATH} is substituted by the absolute file path and the macro ${ITEM_NAME} is substituted by a filename without an extension. 
-
-# MakeConfigurationDescriptor
+# MakeConfigurationDescriptor loical folders names
 SourceFilesTxt=Source Files
 HeaderFilesTxt=Header Files
 ResourceFilesTxt=Resource Files
 ImportantFilesTxt=Important Files
 TestsFilesTxt=Test Files
+
+# MakeConfigurationDescriptor
 AddingFilesTxt=Adding files...
 CannotSaveTxt=The project {0} cannot be saved because the following files are write-protected:
 
@@ -321,100 +137,10 @@ QtApplicationName=Qt Application
 QtDynamicLibraryName=Qt Dynamic Library
 QtStaticLibraryName=Qt Static Library
 
-ProjectDefaultsTxt=Project Defaults
-ProjectDefaultsHint=Project defaults
-DevelopmentHostTxt=Build Host
-DevelopmentHostHint=Local or remote build host
-CompilerCollectionTxt=Tool Collection
-CompilerCollectionHint=Tool collection
-CRequiredTxt=C Compiler Required
-CRequiredHint=The project requires a C compiler to build
-CppRequiredTxt=C++ Compiler Required
-CppRequiredHint=The project requires a C++ compiler to build
-FortranRequiredTxt=Fortran Compiler Required
-FortranRequiredHint=The project requires a Fortran compiler to build
-AssemblerRequiredTxt=Assembler Required
-AssemblerRequiredHint=The project requires an assembler to build
-PlatformTxt=Target Platform
-PlatformHint=Target Platform is the platform (Solaris, Linux, Windows, Mac, ...) the project is built for.
-ConfigurationTypeTxt=Configuration Type
-ConfigurationTypeHint=Configuration type
-ProjectLocationTxt=Project Folder
-DependencyCheckingTxt=Enable Make Dependency Checking
-DependencyCheckingHint=Enable dependency checking in generated makefiles (requires support from tool collection).
-RebuildPropChangedTxt=Rebuild if properties have changed
-RebuildPropChangedHint=Rebuild entire project if project properties have changed
-PlatformSpecificTxt=Platform Specific Configuration
-PlatformSpecificHint=Configuration is platform specific.
-PrependToolCollectionPathTxt=Prepend Tool Collection Path
-PrependToolCollectionPathHint=Prepend tool collection path to PATH environment variable.
-
 # CompilerSet2Configuration
 NOT_FOUND={0} - not found
 NOT_CONFIGURED={0} - Not configured
 default_cs=Default
-
-# PackagingConfiguration
-PackageTypeName=Package Type
-PackageTypeHint=The type of this package.
-FilesName=Packaging Files
-FilesHint=Files and other information in this package.
-VerboseName=Verbose Build
-VerboseHint=Turns verbose build output on or off.
-DefaultArchictureValue=Architecture...
-
-# QtConfiguration
-QtGeneralTxt=General
-QtGeneralHint=General Qmake Configuration
-QtDestdirTxt=Destination Directory
-QtDestdirHint=Directory where build artifact is be placed
-QtTargetTxt=Target Name
-QtTargetHint=Target name without "lib" prefix and suffixes
-QtVersionTxt=Target Version
-QtVersionHint=Target application or library version
-QtBuildModeTxt=Build Mode
-QtBuildModeHint=Build mode
-QtModulesTxt=Qt Modules
-QtModulesHint=Qt modules used by the project
-QtCoreTxt=QtCore
-QtCoreHint=QtCore module (should be enabled in most cases)
-QtGuiTxt=QtGui
-QtGuiHint=QtGui module (should be enabled in most cases)
-QtWidgetsTxt=QtWidgets
-QtWidgetsHint=QtWidgets module (should be enabled for QT5)
-QtNetworkTxt=QtNetwork
-QtNetworkHint=QtNetwork module
-QtOpenglTxt=QtOpenGL
-QtOpenglHint=QtOpenGL module
-QtPhononTxt=Phonon
-QtPhononHint=Phonon Multimedia Framework (since Qt 4.4)
-Qt3SupportTxt=Qt3Support
-Qt3SupportHint=Qt3Support module
-QtPrintSupportTxt=QtPrintSupport
-QtPrintSupportHint=QtPrintSupport module (since Qt 5)
-QtSqlTxt=QtSql
-QtSqlHint=QtSql module
-QtSvgTxt=QtSvg
-QtSvgHint=QtSvg module
-QtXmlTxt=QtXml
-QtXmlHint=QtXml module
-QtWebkitTxt=QtWebKit
-QtWebkitHint=WebKit integration (since Qt 4.4)
-QtIntermediateFilesTxt=Intermediate Files
-QtIntermediateFilesHint=Intermediate Files
-QtMocDirTxt=MOC Directory
-QtMocDirHint=Directory where generated moc_* files will be placed
-QtRccDirTxt=RCC Directory
-QtRccDirHint=Directory where generated qrc_* files will be placed
-QtUiDirTxt=UI Directory
-QtUiDirHint=Directory where generated ui_* files will be placed
-QtExpertTxt=Expert
-QtExpertHint=Expert settings
-QtQmakeSpecTxt=Qmake Spec
-QtQmakeSpecHint=Value of -spec option passed to qmake. Leave empty for default value.
-QtCustomDefsTxt=Custom Definitions
-QtCustomDefsHint=Custom qmake definitions
-QtCustomDefsLbl=Custom &qmake Definitions:
 
 #Upgrade Dialog
 UPGRADE_TXT=This will upgrade the project to the current project version.\n\n\
