Improve TodoList sample

--- a/php.samples/samples_src/TodoList/nbproject/private/private.properties
+++ b/php.samples/samples_src/TodoList/nbproject/private/private.properties
@@ -38,10 +38,8 @@
 #
 # Portions Copyrighted 2016 Sun Microsystems, Inc.
 
-include.path=${php.global.include.path}
-php.version=PHP_53
-source.encoding=UTF-8
-src.dir=.
-tags.asp=false
-tags.short=false
-web.root=web
+copy.src.on.open=false
+hostname=localhost
+port=8000
+run.as=INTERNAL
+url=http://localhost:8000/
