--- a/cnd.utils/src/org/netbeans/modules/cnd/utils/resources/Bundle.properties
+++ b/cnd.utils/src/org/netbeans/modules/cnd/utils/resources/Bundle.properties
@@ -1,6 +1,6 @@
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 2012, 2016 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2007, 2016 Oracle and/or its affiliates. All rights reserved.
 #
 # Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 # Other names may be trademarks of their respective owners.
@@ -35,5 +35,15 @@
 # made subject to such option by the copyright holder.
 #
 # Contributor(s):
-MakeResolver.Name=Makefile Resolver
-MakeResolver.FileChooserName=Makefiles
+OpenIDE-Module-Display-Category=C/C++
+OpenIDE-Module-Long-Description=\
+    Common C/C++ Utilities
+OpenIDE-Module-Name=C/C++ Utilities
+OpenIDE-Module-Short-Description=C/C++ Utilities
+
+#Extensions support
+CND/Extensions/Header=C/C++ Header File
+CND/Extensions/C++=C++ File
+CND/Extensions/C=C File
+CND/Extensions/Fortran=Fortran File
+CND/Extensions/Assembler=Assembler File
