--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/Bundle.properties
@@ -63,6 +63,7 @@ ERR_MISSING_TOOL2=Cannot find "{0}". This feature may not be available on this p
 ERR_MISSING_TOOL3=Cannot find "{0}". This feature may not be available on {1}.
 ERR_MISSING_TOOL4=Cannot find "{0}" packager. This feature may not be available on this platform.
 WRONG_PLATFORM=Warning: this project was created for the {1} OS but the build host OS is {0}.\n\nThe project may not build or run correctly on this host. To use the project, you can close the project and reopen it on a host running {1}. If you must run the project on {0}, you may need to make changes to the properties of the project and reconfigure it for the {0} platform.
+LBL_ResolveMissingTools_Title=Resolve Missing Native Build Tools
 
 # MakeProject.java
 ProjectNotSaved=The project was not saved.
