Additional fix for #255959 - Dynamic Libraries Not Found for Sample Projects

--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
@@ -132,7 +132,7 @@ AdditionalDependenciesTxt2=Additional dependencies:
 InputTxt=Input
 InputHint=Input
 OutputTxt=Output
-OutputHint=Name of output file or output directory.
+OutputHint=Name of output file.
 OtherOptionsTxt=Other Options
 OtherOptionsHint=Other options
 ToolTxt1=Tool
