--- a/cnd.toolchain.ui/src/org/netbeans/modules/cnd/toolchain/ui/compilerset/Bundle.properties
+++ b/cnd.toolchain.ui/src/org/netbeans/modules/cnd/toolchain/ui/compilerset/Bundle.properties
@@ -34,21 +34,6 @@
 # Software is Sun Microsystems, Inc. Portions Copyright 1997-2007 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-LBL_EmptyCompilerSetName=None
-LBL_EmptyCompilerSetDisplayName=No Compilers Found
-
-CCompiler=C Compiler
-CCCompiler=C++ Compiler
-FortranCompiler=Fortran Compiler
-CustomBuildTool=Custom Build Tool
-Assembler=Assembler
-MakeTool=Make Tool
-DebuggerTool=Debugger
-QMakeTool=QMake Tool
-CMakeTool=CMake Tool
-
-# CompilerSetManager
-NO_COMPILERS_FOUND_TITLE=No C/C++ Compilers Found
 NO_COMPILERS_FOUND_MSG=\
 No suitable compilers were found on your system. The IDE needs a suitable set of compilers and other build tools in order to work correctly.\n\n\
 If you already have compilers on your system but they were not found, do one of the following:\n\n\
@@ -57,22 +42,9 @@ If you already have compilers on your system but they were not found, do one of 
 If you do not already have compilers on your system, do:\n\n\
 3) Download and install a suitable set of compilers and restart the IDE.\n\n\
 See the article "Configuring the NetBeans IDE for C/C++/Fortran" at http://netbeans.org/kb/trails/cnd.html for more information.
-UnknownToolCollection=Unknown
 
-# CSM_ stands for CompilerSetManager
-CSM_Conn=Connecting to {0}...
-CSM_Done= done.
-CSM_ValPlatf=Validating platform... found {0}
-CSM_LFTC=Looking for tool collections:
-CSM_Found=   Found {0} at {1}.
-CSM_Err=  Error creating compiler set {0}
-CSM_Done_NF=Done. No tool collections were found in default locations.\nYou can configure them manually later using\n Tools > Options > C/C++ > Build Tools dialog.
-CSM_Done_OK=Done. Found {0} tool collection(s).
-CSM_Conigured=Tool collections were successfully configured.
-CSM_Canceled=Tool collections search was canceled
-CSM_Fail=...failed. Hostname is wrong or host is offline.
-CSM_Initializing_Tool=Checking {0} ...
-
-PROGRESS_TEXT=Initializing tools collections on {0}
-
-ToolCollectionValidation=Validating Tool collection on {0}
+FixCodeAssistancePanel.title.text=Tool Collections were Changed
+FixCodeAssistancePanel.action.text=Fix Code Assistance
+FixCodeAssistancePanel.action.OK=Fix Code Assistance
+FixCodeAssistancePanel.action.CANCEL=Cancel
+FixCodeAssistancePanel.message=Following tools were changed:\n{0}
