Updated project for javawebstart AntTasks.

--- a/javawebstart/AntTasks/nbproject/project.properties
+++ b/javawebstart/AntTasks/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
 # Copyright (c) 2008, 2016 Oracle and/or its affiliates. All rights reserved.
@@ -55,6 +59,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/org-netbeans-modules-javawebstart-anttasks.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.ant.jar=${ant.home}/lib/ant.jar:${ant.core.lib}
 includes=**/anttasks/**
@@ -64,8 +69,11 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -86,6 +94,7 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
