#255310:Resolve missing JDK should allow to select an existing one

--- a/java.project.ui/src/org/netbeans/modules/java/project/ui/Bundle.properties
+++ b/java.project.ui/src/org/netbeans/modules/java/project/ui/Bundle.properties
@@ -116,3 +116,8 @@ FixProjectSourceLevel.managePlatforms.text=&Manage Platforms...
 FixProjectSourceLevel.downgradeLevel.text=&Downgrade Project Source/Binary Format to {0}
 FixProjectSourceLevel.useOtherPlatform.text=Use Other Java &Platform
 FixProjectSourceLevel.jLabel1.text=&Java Platform:
+FixPlatform.create.text=&Manage Platforms...
+LBL_MissingPlatform=<html>The Java Platform called "<font color="{0}">{1}</font>" was not found.
+LBL_CreateNewPlatform=Either create a new Java Platform
+LBL_UseExistingPlatform=or use an &existing Java Platform:
+LBL_PlatformHint=<html>Hint: For version controlled projects it''s recommended to create a new Java Platform "{0}".
