fix license in formatting samples

--- a/cnd.editor/src/org/netbeans/modules/cnd/editor/options/Bundle.properties
+++ b/cnd.editor/src/org/netbeans/modules/cnd/editor/options/Bundle.properties
@@ -291,3 +291,317 @@ LBL_OverrideGlobalOptions=&Override Global Options
 NewStyleName.idLabel.text=&ID:
 
 NonNegativeValue=Negative value is not allowed
+
+# Should not be translated
+SAMPLE_AlignBraces_cpp=class ClassA : InterfaceA, InterfaceB, InterfaceC {\n\
+public:\n\
+int number = 1;\n\
+private:\n\
+String letters[] = new String[]{ "A", "B", "C", "D" };\n\
+ClassA() {\n\
+}\n\
+public:\n\
+int method(String text,\n\
+int number, Object object) throw ExceptionA, ExceptionB {\n\
+printf(nuber + text.length() < 20 ? "message1" : "message2",\n\
+       25);\n\
+if ( text == null ) {\n\
+text = "a";\n\
+}\n\
+else if (text.length() == 0) {\n\
+text = number == 2 ? "empty" : "nonempty";\n\
+number = ((op3() + 2) * op4);\n\
+}\n\
+else {\n\
+    number++;\n\
+}\n\
+for( int i = 1; i < 100; i++ ) {\n\
+}\n\
+while ( this->number < 2 && number != 3 ) {\n\
+method( "Some text", 12,\n\
+        new Object());\n\
+}\n\
+do {\n\
+try {\n\
+op1().op2.op3().op4();\n\
+}\n\
+catch ( Throwable t ) {\n\
+log();\n\
+}\n\
+} while ( this->number < 2 && number != 3 );\n\
+switch(number) {\n\
+case 1:\n\
+    return method("text", 22);\n\
+case 2:\n\
+    return 20;\n\
+default:\n\
+    return -1;\n\
+}\n\
+}\n\
+enum Where {\n\
+NORTH, EAST, SOUTH, WEST;\n\
+};\n\
+};\n\
+
+
+# Should not be translated
+SAMPLE_AlignBraces_c=struct StructA {\n\
+int number;\n\
+char* letters;\n\
+};\n\
+enum Where {\n\
+NORTH, EAST, SOUTH, WEST;\n\
+};\n\
+int method(char* text,\n\
+int number, Object object) {\n\
+printf(number + text.length() < 20 ? "message1" : "message2",\n\
+25);\n\
+if ( text == NULL ) {\n\
+text = "a";\n\
+}\n\
+else if (strlen(text) == 0) {\n\
+text = number == 2 ? "empty" : "nonempty";\n\
+number = ((op3() + 2) * op4);\n\
+}\n\
+else {\n\
+    number++;\n\
+}\n\
+for( int i = 1; i < 100; i++ ) {\n\
+}\n\
+while ( number < 2 && number != 3 ) {\n\
+method( "Some text", 12,\n\
+new Object());\n\
+}\n\
+do {\n\
+op1().op2.op3().op4();\n\
+} while ( number < 2 && number != 3 );\n\
+switch(number) {\n\
+case 1:\n\
+    return method("text", 22);\n\
+case 2:\n\
+    return 20;\n\
+default:\n\
+    return -1;\n\
+}\n\
+}\n\
+
+
+# Should not be translated
+SAMPLE_Spaces_cpp=class ClassA {\n\
+public:\n\
+int            number;\n\
+private:\n\
+String         text;\n\
+static float[] floats;\n\
+protected:\n\
+double[]       doubles;\n\
+\n\
+ClassA() : number(1), text("A") {\n\
+};\n\
+public:\n\
+int method(String text, int number) {\n\
+if (number==13) {\n\
+return (int)System.currentTimeMillis();\n\
+}else {\n\
+{}\n\
+}\n\
+for( int i = 20; i < 100; i++) {\n\
+    {\n\
+        while(i%13>5)\n\
+            method( text + " ", number++);\n\
+    }\n\
+}\n\
+\n\
+switch(number) {\n\
+case 1:\n\
+    do { out( (2+3)*this->number--); } while(this->number > 6);\n\
+    return 10;\n\
+case 2:\n\
+    try {\n\
+        toString();\n\
+    }\n\
+    catch ( IllegalStateException illegalStateException ) {\n\
+        illegalStateException.printStackTrace();\n\
+    }\n\
+default:\n\
+   return number > 100 ? -1 : -2;\n\
+}\n\
+}\n\
+};\n\
+
+
+# Should not be translated
+SAMPLE_Spaces_c=struct ClassA {\n\
+int    number;\n\
+String text;\n\
+};\n\
+static float[] floats;\n\
+double[]       doubles;\n\
+\n\
+doubles = {3.67,40,2e-30};\n\
+\n\
+int method(String text, int number) {\n\
+if (number==13) {\n\
+return (int)System.currentTimeMillis();\n\
+}else {\n\
+{}\n\
+}\n\
+for( int i = 20; i < 100; i++) {\n\
+    {\n\
+        while(i%13>5)\n\
+            method( text + " ", number++);\n\
+        toString("next");\n\
+    }\n\
+}\n\
+\n\
+switch(number) {\n\
+case 1:\n\
+    do { out( (2+3)*number--); } while(number > 6);\n\
+    return 10;\n\
+case 2:\n\
+{\n\
+    toString();\n\
+}\n\
+default:\n\
+   return number > 100 ? -1 : -2;\n\
+}\n\
+}\n\
+
+
+# Should not be translated
+SAMPLE_TabsIndents_cpp=#include <Map>\n\
+/*\n\
+ */\n\
+namespace A{\n\
+class ClassA : InterfaceA, InterfaceB, InterfaceC {\n\
+public:\n\
+int number;\n\
+enum inner {\n\
+    PLUS, MINUS\n\
+};\n\
+private:\n\
+char** cc;\n\
+public:\n\
+ClassA():cc({ "A", "B", "C", "D"}), number(2){\n\
+}\n\
+int method(char* text, int number) {\n\
+if ( text == NULL ) {\n\
+    text = "a";\n\
+#ifdef C\n\
+#define C1\n\
+#ifdef F\n\
+#define F2\n\
+#endif\n\
+#else\n\
+#define C2\n\
+#endif\n\
+label:\n\
+switch(number) {\n\
+case 1:\n\
+    return method("text", 22);\n\
+case 2:\n\
+    return 20;\n\
+default:\n\
+    return -1;\n\
+}\n\
+}\n\
+else if (text[0] == 0) {\n\
+    text = "empty";\n\
+}\n\
+else {\n\
+    number++;\n\
+}\n\
+}\n\
+};\n\
+}\n\
+
+
+# Should not be translated
+SAMPLE_TabsIndents_c=#include <Map>\n\
+/*\n\
+ */\n\
+struct ClassA\n\
+{\n\
+    int number;\n\
+    static char** cc;\n\
+};\n\
+ClassA::cc = { "A", "B", "C", "D" };\n\
+\n\
+int method(char* text, int number)\n\
+{\n\
+    if ( text == NULL ) {\n\
+        text = "a";\n\
+#ifdef C\n\
+#define C1\n\
+#ifdef F\n\
+#define F2\n\
+#endif\n\
+#else\n\
+#define C2\n\
+#endif\n\
+    label:\n\
+    switch(number) {\n\
+        case 1:\n\
+            return method("text", 22);\n\
+        case 2:\n\
+            return 20;\n\
+        default:\n\
+            return -1;\n\
+    }\n\
+    }\n\
+    else if (text[0] == 0) {\n\
+        text = "empty";\n\
+    }\n\
+    else {\n\
+        number++;\n\
+    }\n\
+}\n\
+
+
+# Should not be translated
+SAMPLE_BlankLines_cpp=#include <List>\n\
+#include <Map>\n\
+\n\
+class ClassA {\n\
+public:\n\
+int i;\n\
+public:\n\
+int j;\n\
+public:\n\
+ClassA() {\n\
+};\n\
+public:\n\
+void methodA() {\n\
+}\n\
+void methodB() {\n\
+}\n\
+class innerClass {\n\
+};\n\
+class innerInterface {\n\
+};\n\
+};\n\
+
+
+# Should not be translated
+SAMPLE_BlankLines_c=#include <List>\n\
+#include <Map>\n\
+struct ClassA {\n\
+int i;\n\
+int j;\n\
+};\n\
+void methodA() {\n\
+}\n\
+void methodB() {\n\
+}\n\
+extern "C"{\n\
+struct ClassA1 {\n\
+int i;\n\
+int j;\n\
+};\n\
+void methodA1() {\n\
+}\n\
+void methodB1() {\n\
+}\n\
+}\n\
+
+
