fixed Bug #256033 Choosing multiple folders for include directories adds bogus entries

--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/utils/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/utils/Bundle.properties
@@ -73,6 +73,8 @@ ADD_DIRECTORY_DIALOG_TITLE=Select Directory
 ADD_DIRECTORY_BUTTON_TXT=Select
 ADD_DIRECTORY_OR_FILE_DIALOG_TITLE=Select Directory or Header File
 ADD_DIRECTORY_OR_FILE_BUTTON_TXT=Select
+ADD_FILE_DIALOG_TITLE=Select Header File
+ADD_FILE_BUTTON_TXT=Select
 ADD_BUTTON_TXT=Add
 ADD_BUTTON_MN=A
 DOWN_BUTTON_TXT=Down
