#256404: UI warns if a symbol should be shadowed; refactors references, if the user insists on shadowing

--- a/java.hints/src/org/netbeans/modules/java/hints/introduce/Bundle.properties
+++ b/java.hints/src/org/netbeans/modules/java/hints/introduce/Bundle.properties
@@ -134,3 +134,5 @@ MSG_DuplicateMethodPiece=Replace this duplicate with invocation of the original 
 LBL_PickExpression=Pick expression
 ERR_No_Valid_Expressions_Found=No valid expressions found
 IntroduceMethodPanel.jLabel1.text=&Target Class:
+IntroduceMethodPanel.checkRefactorExisting.text=Point existing references to original method
+IntroduceFieldPanel.checkRefactorExisting.text=Point existing references to original field
