#239110:Cannot create jre with fx extension

--- a/java.j2seembedded/src/org/netbeans/modules/java/j2seembedded/ui/Bundle.properties
+++ b/java.j2seembedded/src/org/netbeans/modules/java/j2seembedded/ui/Bundle.properties
@@ -51,8 +51,6 @@ CreateJREPanel.checkBoxNoCompression.text=&No Compression
 CreateJREPanel.labelProfile.text=&Profile:
 CreateJREPanel.labelVM.text=&Virtual Machine:
 CreateJREPanel.labelExtensions.text=Extensions
-CreateJREPanel.checkBoxFxGraphics.text=fx:&graphics
-CreateJREPanel.checkBoxFxControls.text=fx:c&ontrols
 CreateJREPanel.checkBoxSunec.text=&sunec
 CreateJREPanel.checkBoxSunpkcs11.text=s&unpkcs11
 CreateJREPanel.checkBoxLocales.text=&locales
@@ -68,3 +66,4 @@ LBL_CreateJRETitle=Create Java SE Embedded JRE
 ERROR_Invalid_CreateJREPanel=JRE Create Location or Remote JRE Path is missing or invalid.
 LBL_Dialog_Button_Create=Create
 TXT_InvalidEJDKFolder=The {0} is not a valid EJDK location.
+CreateJREPanel.checkBoxGcf.text=&gcf
