fixed Bug #262489 "Configure code assistance" dialog: correct wording

--- a/cnd.dwarfdiscovery/src/org/netbeans/modules/cnd/dwarfdiscovery/provider/Bundle.properties
+++ b/cnd.dwarfdiscovery/src/org/netbeans/modules/cnd/dwarfdiscovery/provider/Bundle.properties
@@ -77,9 +77,9 @@ Make_Log_File_Name=Select build &log file:
 Make_Log_File_Description=Specify absolute path to the output file of the Build Command (build log).
 
 # analyze exec log file
-Exec_Log_Provider_Name=Explore Exec Log File
+Exec_Log_Provider_Name=Explore Build Analyzer Log File
 Exec_Log_Provider_Description=IDE explores the the output file of Build Analyzer (exec log) or the compile commands file (compile_commands.json).
-Exec_Log_File_Name=Select exec &log file:
+Exec_Log_File_Name=Select build analyzer &log file:
 Exec_Log_File_Description=Specify absolute path to the output file of Build Analyzer (exec log) or the compile commands file (compile_commands.json).
  
 NoExecutable=No binary file in input parameters
