#255635: rethrowing exception in nested finally needs special handling

--- a/java.hints/src/org/netbeans/modules/java/hints/bugs/Bundle.properties
+++ b/java.hints/src/org/netbeans/modules/java/hints/bugs/Bundle.properties
@@ -150,7 +150,9 @@ DESC_TryCatchFinally_finallyDiscardsException=Reports usage of <b>return</b> sta
 DN_TryCatchFinally_finallyThrowsException='throw' inside 'finally' block
 DESC_TryCatchFinally_finallyThrowsException=Throwing an exception inside <b>finally</b> block will hide the original exception thrown from \
     the associated <b>try</b> or <b>catch</b> blocks from enclosing exception handlers. Note that the exception can be still inspected \
-    using <b>Throwable.getSuppressedException()</b>, although it cannot be directly caught by a <b>catch</b> block.
+    using <b>Throwable.getSuppressedException()</b>, although it cannot be directly caught by a <b>catch</b> block.<p/>\
+    If "<i>Report rethrow of caught exceptions</i>" is disabled, the hint will not report statements, which just rethrow the very exception \
+    instances received by an enclosing catch handler.
 
 DN_CloneAndCloneable_cloneWithoutSuperClone=clone() does not call super.clone()
 DESC_CloneAndCloneable_cloneWithoutSuperClone=Cloned instances should be allocated using <b>super.clone()</b> so fields are \
