--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/ui/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/ui/Bundle.properties
@@ -39,6 +39,6 @@
 # However, if you add GPL Version 2 code and therefore, elected the GPL
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
-ECMAScriptPanel.lVersion.text=ECMA Version:
+ECMAScriptPanel.lVersion.text=ECMA &Version:
 ECMAScriptPanel.allowJsonComments.text=&Allow comments in JSON files
 ECMAScriptPanel.allowJsonComments.ad=N/A
