Showing unnamed module in java module graph.

--- a/java.module.graph/src/org/netbeans/modules/java/module/graph/Bundle.properties
+++ b/java.module.graph/src/org/netbeans/modules/java/module/graph/Bundle.properties
@@ -9,3 +9,4 @@ GraphTopComponent.lblFind.text=Find:
 GraphTopComponent.lblPath.text=Path:
 GraphTopComponent.maxPathSpinner.toolTipText=Highlight artifacts on shorter paths, disable paths longer then limit
 GraphTopComponent.lblPath.toolTipText=Highlight artifacts on shorter paths, disable paths longer then limit
+LBL_UnnamedModule=<<unnamed>>
