--- a/cnd.refactoring/src/org/netbeans/modules/cnd/refactoring/plugins/Bundle.properties
+++ b/cnd.refactoring/src/org/netbeans/modules/cnd/refactoring/plugins/Bundle.properties
@@ -174,6 +174,7 @@ ERR_CannotModifyInFile=Cannot modify element in read only or library file: "{0}"
 ERR_ResourceUnavailable=Cannot rename method "{0}". Source file "{1}" not available.
 ERR_RenameNative=Attempt to rename native method "{0}". Renaming a native method can cause UnsatisfiedLinkError on runtime.
 ERR_CannotRefactorThis=Cannot refactor "{0}".
+ERR_IcludedByCompileOption=The file "{0}" includes "{1}" by -include compile option. Renaming do not affect of compile options.
 
 #Rename package
 TXT_RenamePackage=Rename file 
