#171261 - Show proper category for actions registered by @EditorActionRegistration in Tools > Options > Keymap

--- a/editor.lib2/test/unit/src/org/netbeans/modules/editor/lib2/testactionsregistration/Bundle.properties
+++ b/editor.lib2/test/unit/src/org/netbeans/modules/editor/lib2/testactionsregistration/Bundle.properties
@@ -47,3 +47,4 @@ editor-test-action3=Short Desc3
 editor-test-action2_menu_text=Menu Text2
 editor-test-action3_menu_text=Menu Text3
 editor-test-action3_popup_text=Popup Text3
+editor-test-action5=Short Desc5
