Initial commit of React support module

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -1482,6 +1482,7 @@ nb.cluster.webcommon=\
         javascript2.model,\
 	javascript2.nodejs,\
         javascript2.prototypejs,\
+        javascript2.react,\
 	javascript2.requirejs,\
         javascript2.sdoc,\
         javascript2.source.query,\
