provide in team view remote machines for a dcs project. work in progress ...

--- a/odcs.cnd/nbproject/project.properties
+++ b/odcs.cnd/nbproject/project.properties
@@ -1,6 +1,6 @@
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright 2012 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2012, 2016 Oracle and/or its affiliates. All rights reserved.
 #
 # Oracle and Java are registered trademarks of Oracle and/or its affiliates.
 # Other names may be trademarks of their respective owners.
@@ -35,57 +35,6 @@
 # made subject to such option by the copyright holder.
 #
 # Contributor(s):
-#
-# Portions Copyrighted 2012 Sun Microsystems, Inc.
-
-
-LBL_Builds=Builds
-LBL_RemoteMachines=Remote Machines
-LBL_NewBuild=New Build...
-LBL_OpenNbProject=Open local project...
-LBL_OpenFavorites=Browse...
-LBL_Issues=Tasks
-LBL_FindIssue=Find Task...
-LBL_LoadingTitle=Loading
-LBL_LoadingInProgress=loading...
-LBL_NotResponding=Not responding
-LBL_Sources=Sources
-LBL_Members=Members
-# node header for list of project members
-# {0} - how many of the members are online
-LBL_MembersOnline=Members ({0} online)
-
-CTL_RemoveInstance=Remove Team Server
-
-LBL_WhatIsTeam=What is Team Server?
-LBL_OpeningProjects=Opening projects...
-LBL_OpeningMyProjects=Opening my projects...
-LBL_Authenticating=Authenticating...
-LBL_Bookmarking=Updating Bookmarks...
-LBL_Deleting=Deleting project...
-LBL_ConnectingXMPP=Joining chat...
-LBL_LoadingIssues=Loading tasks...
-LBL_NewIssue=New Task...
-ERR_OpenMemberProjects=Cannot open member projects
-ERR_OpenProjects=Cannot open projects
-ERR_LoadingProjects=Error while loading some projects
-
-
-LBL_LeaveProject=Leave project
-LBL_Bookmark=Bookmark
-LBL_Open=Open
-LBL_Close=Close
-LBL_MyProjects=My Projects
-LBL_OpenProjects=Open Projects
-LBL_MyProject_Tooltip=I am a member of this project
-
-CLICK_TO_SELECT=Click here to select project
-NO_PROJECTS_OPEN=No opened project
-NO_MY_PROJECTS=You are not a member of any project yet
-
-LBL_Refresh=Refresh
-LBL_Login=Login...
-LBL_Logout=logout
-LBL_NewProject=New Team Project...
-LBL_OpenProject=Open Team Project...
-CTL_RemoveProject=Close
+is.eager=true
+javac.source=1.8
+javac.compilerargs=-Xlint -Xlint:-serial
