Fixing #263216 - UI issues introduced by "new and noteworthy" features in 8.2 - fixed [2]

--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
@@ -416,8 +416,8 @@ RebuildPropChangedTxt=Rebuild if properties have changed
 RebuildPropChangedHint=Rebuild entire project if project properties have changed
 PlatformSpecificTxt=Platform Specific Configuration
 PlatformSpecificHint=Configuration is platform specific.
-PrependToolCollectionPathTxt=Prepend Tool Collection Path
-PrependToolCollectionPathHint=Prepend tool collection path to PATH environment variable.
+PrependToolCollectionPathTxt=Modify Tool Collection Path
+PrependToolCollectionPathHint=Prepend or Append tool collection path to PATH environment variable.
 
 # CompilerSet2Configuration
 NOT_FOUND={0} - not found
