Fixing #263216 - UI issues introduced by "new and noteworthy" features in 8.2 - fixed [4]

--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/wizards/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/wizards/Bundle.properties
@@ -426,8 +426,8 @@ SelectBinaryPanelVisual.viewLabel.text=Include into &Project
 ProjectViewSource=All files under Source Root
 ProjectViewLogical=Source files used in build
 SearchForUnresolvedDLL=Search for unresolved shared libraries
-SelectBinaryPanelVisual.Unsupported.Binary=Unsupported binary file format
-SelectBinaryPanelVisual.FileNotFound=Binary file not found
+SelectBinaryPanelVisual.Unsupported.Binary=Unsupported binary file format: "{0}"
+SelectBinaryPanelVisual.FileNotFound=Binary file not found: "{0}"
 
 DefaultToolCollection=Default
 run.configure.subfolder=R&un Configure Script in Subfolder:
