--- a/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
+++ b/cnd.makeproject.ui/src/org/netbeans/modules/cnd/makeproject/ui/customizer/Bundle.properties
@@ -417,7 +417,7 @@ RebuildPropChangedHint=Rebuild entire project if project properties have changed
 PlatformSpecificTxt=Platform Specific Configuration
 PlatformSpecificHint=Configuration is platform specific.
 PrependToolCollectionPathTxt=Modify Tool Collection Path
-PrependToolCollectionPathHint=Prepend or Append tool collection path to PATH environment variable.
+PrependToolCollectionPathHint=Prepend or append tool collection path to PATH environment variable.
 
 # CompilerSet2Configuration
 NOT_FOUND={0} - not found
