bugfix #267213, use new JEP-272 API on JDK 9, use non-deprecated API from com.apple.eawt.* on JDK 8

--- a/applemenu/build.xml
+++ b/applemenu/build.xml
@@ -49,6 +49,7 @@ made subject to such option by the copyright holder.
 
   <target name="compile" depends="projectized-common.compile">
     <delete dir="${build.classes.dir}/com"/> <!-- just stubs -->
+    <delete dir="${build.classes.dir}/java"/> <!-- just stubs -->
   </target>
 
 </project>
