#248969 - Add indication where CDNJS library will be saved to
Info label added.

--- a/javascript.cdnjs/src/org/netbeans/modules/javascript/cdnjs/ui/Bundle.properties
+++ b/javascript.cdnjs/src/org/netbeans/modules/javascript/cdnjs/ui/Bundle.properties
@@ -52,6 +52,7 @@ SearchPanel.filesLabel.text=Files:
 SelectionPanel.addButton.text=Add
 SelectionPanel.removeButton.text=Remove
 SelectionPanel.folderLabel.text=Libraries Folder:
+SelectionPanel.folderInfoLabel.text=Relative path from web root
 SelectionPanel.browseButton.text=Browse
 SelectionPanel.editButton.text=Edit
 SelectionPanel.updateButton.text=Update
