#258797 - Multicaret: Put all multicaret actions into separate keymap category "Edit (Multicaret)" for better visibility
Based on documentation at http://wiki.netbeans.org/DevFaqHowToDefineTheKeyMapCategoryForAnAction#Keymap_category_for_.40EditorActionRegistration

--- a/editor.actions/src/org/netbeans/modules/editor/actions/Bundle.properties
+++ b/editor.actions/src/org/netbeans/modules/editor/actions/Bundle.properties
@@ -74,3 +74,4 @@ clipboard-lines=Paste as Lines
 remove-last-caret=Remove Last Caret
 add-caret-up=Duplicate Insertion Point Up
 add-caret-down=Duplicate Insertion Point Down
+OptionsDialog/Actions/edit.multicaret=Edit (Multicaret)
