fixed Bug #267248 Update list tool collection list

--- a/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/Bundle.properties
+++ b/cnd.toolchain/src/org/netbeans/modules/cnd/toolchain/Bundle.properties
@@ -40,6 +40,9 @@ OpenIDE-Module-Name=C/C++ Tool Collection
 CND/ToolChains/OSS_solaris-sparc=Oracle Developer Studio
 CND/ToolChains/OSS_solaris-x86_linux=Oracle Developer Studio
 CND/ToolChains/OSS_linuxCompatGNU=Oracle Developer Studio in GNU compatibility mode
+CND/ToolChains/OSS_5.14_solaris-sparc={Oracle Developer Studio}
+CND/ToolChains/OSS_5.14_solaris-x86_linux={Oracle Developer Studio}
+CND/ToolChains/OSS_5.14_linuxCompatGNU={Oracle Developer Studio} in GNU compatibility mode
 CND/ToolChains/OSS_5.13_solaris-sparc={Oracle Solaris Studio 12.4}
 CND/ToolChains/OSS_5.13_solaris-x86_linux={Oracle Solaris Studio 12.4}
 CND/ToolChains/OSS_5.13_linuxCompatGNU={Oracle Solaris Studio 12.4} in GNU compatibility mode
