--- a/cnd.toolchain.ui/src/org/netbeans/modules/cnd/api/toolchain/ui/Bundle.properties
+++ b/cnd.toolchain.ui/src/org/netbeans/modules/cnd/api/toolchain/ui/Bundle.properties
@@ -53,3 +53,19 @@ RestoringToolchainsTitle=Restoring Default Tool Collections
 RestoringToolchainsMessage=Please wait while default tool collections are being restored
 
 ErrorCompilerSetNotFound=Can not find {0} tool collection
+
+MODIFY_PATH_VARIABLE=Path Variable
+ToolCollectionPanel.btPathEdit.text=...
+PathEnvVariables.addLabel.text=Add Tool Collection Path in the PATH Environment Variable
+PathEnvVariables.toolsLabel.text==
+PathEnvVariables.toolsVariableTextField.text=TOOLS_PATH
+PathEnvVariables.utilitiesVariableTextField.text=UTILITIES_PATH
+PathEnvVariables.utilitiesLabel.text==
+PathEnvVariables.modifyBuildLabel.text=Modify Clean, Build, Compile Commands Path:
+PathEnvVariables.modifyRunLabel.text=Modify Run Command Path:
+ModifyBuildPath=${TOOLS_PATH};${UTILITIES_PATH};${PATH}
+ModifyRunPath=${PATH};${TOOLS_PATH};${UTILITIES_PATH}
+PathEnvVariables.pathBuildVariableTextField.text=PATH
+PathEnvVariables.pathBuildVariableLabel.text==
+PathEnvVariables.pathRunVariableTextField.text=PATH
+PathEnvVariables.pathRunVariableLabel.text==
