additional fix for #263216 - UI issues introduced by "new and noteworthy" features in 8.2

--- a/cnd.toolchain.ui/src/org/netbeans/modules/cnd/toolchain/ui/options/Bundle.properties
+++ b/cnd.toolchain.ui/src/org/netbeans/modules/cnd/toolchain/ui/options/Bundle.properties
@@ -389,7 +389,7 @@ ToolsPanel.Cygwin32OnJDK64.warning=It is advised to start 32-bit NetBeans to use
 ToolsPanel.Cygwin64OnJDK32.warning=It is advised to start 64-bit NetBeans to use 64-bit Cygwin.
 
 MODIFY_PATH_VARIABLE=Path Variable
-ToolCollectionPanel.btPathEdit.text=...
+ToolCollectionPanel.btPathEdit.text=$PATH
 PathEnvVariables.addLabel.text=Add Tool Collection Path in the PATH Environment Variable
 PathEnvVariables.toolsLabel.text==
 PathEnvVariables.toolsVariableTextField.text=TOOLS_PATH
