Moving Truffle node.js debug startup argument extended into separate eager module

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -1410,6 +1410,7 @@ nb.cluster.experimental=\
         contrib/websvc.saas.services.rtm,\
         contrib/whichproject,\
         debugger.jpda.truffle,\
+        debugger.jpda.trufflenode,\
         j2ee.websphere6,\
         j2me.cdc.platform.bdj,\
         j2me.cdc.project.bdj,\
