some minor fixes in license headers

--- a/netbinox/src/org/netbeans/modules/netbinox/Bundle.properties
+++ b/netbinox/src/org/netbeans/modules/netbinox/Bundle.properties
@@ -36,5 +36,5 @@
 #
 # Contributor(s):
 #
-# Portions Copyrighted 2011 Oracle
+# Portions Copyrighted 2011 Oracle, Inc.
 OpenIDE-Module-Name=NetBeans Equinox Integration
