--- a/netbinox/build.xml
+++ b/netbinox/build.xml
@@ -38,7 +38,7 @@ made subject to such option by the copyright holder.
 
 Contributor(s):
 
-Portions Copyrighted 2011 Oracle
+Portions Copyrighted 2011 Oracle, Inc.
 
 -->
 
