--- a/php.nette2/src/org/netbeans/modules/php/nette2/resources/Bundle.properties
+++ b/php.nette2/src/org/netbeans/modules/php/nette2/resources/Bundle.properties
@@ -43,3 +43,6 @@ OpenIDE-Module-Long-Description=\
     Support for Nette2 Framework
 OpenIDE-Module-Name=Nette2 Framework
 OpenIDE-Module-Short-Description=Support for Nette2 Framework
+
+# import/export
+LBL_Nette2ExportName=Nette2
