--- a/php.twig/src/org/netbeans/modules/php/twig/resources/Bundle.properties
+++ b/php.twig/src/org/netbeans/modules/php/twig/resources/Bundle.properties
@@ -43,6 +43,9 @@ OpenIDE-Module-Long-Description=Support for Twig template engine for PHP.
 OpenIDE-Module-Name=Twig Templates
 OpenIDE-Module-Short-Description=Support for Twig template engine for PHP
 
+# import/export
+LBL_TwigExportName=Twig
+
 text/x-twig=Twig File
 Editors/text/x-twig-block=Twig Block
 Editors/text/x-twig-variable=Twig Variable
